[gd_scene load_steps=17 format=3 uid="uid://chm0a8w56kiny"]

[ext_resource type="Script" uid="uid://b48us2j2d45hn" path="res://godot4/actors/ships/DisabledShip.gd" id="1_qvvl6"]
[ext_resource type="Texture2D" uid="uid://b5gwcatylq8lk" path="res://assets/sprites/species/drones/ship.png" id="4_4idgn"]
[ext_resource type="PackedScene" uid="uid://clbsrjsidxhav" path="res://combat/traits/Tracked.tscn" id="4_jhun4"]
[ext_resource type="Shader" uid="uid://ctwaq21cw4j8y" path="res://assets/shaders/outline.gdshader" id="7_2xosv"]
[ext_resource type="Script" uid="uid://bpexb6wjfpakj" path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" id="10_s5i80"]
[ext_resource type="AudioStream" uid="uid://y066l7id4wb5" path="res://assets/audio/FX/sfx_sound_shutdown1.wav" id="11_nl2p4"]
[ext_resource type="AudioStream" uid="uid://cnr33o7pkt1im" path="res://assets/audio/FX/sfx_sounds_interaction12.wav" id="12_sdkoe"]

[sub_resource type="PhysicsMaterial" id="1"]
bounce = 1.0

[sub_resource type="ShaderMaterial" id="3"]
shader = ExtResource("7_2xosv")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 20.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="2"]
radius = 40.0

[sub_resource type="Animation" id="4"]
resource_name = "Blink"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnderSprite:material:shader_parameter/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 20.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"beep"
}]
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UnderSprite:material:shader_param/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0bjvr"]
_data = {
&"Blink": SubResource("4"),
&"RESET": SubResource("5")
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.101961, 0.101961, 0.101961, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(3, 3, 3, 1), Color(0.101961, 0.101961, 0.101961, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dese6"]
_data = {
&"RESET": SubResource("6"),
&"hit": SubResource("7")
}

[node name="DisabledShip" type="RigidBody2D" groups=["Foreground", "in_camera"]]
collision_layer = 8192
collision_mask = 1168
physics_material_override = SubResource("1")
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
script = ExtResource("1_qvvl6")

[node name="Tracked" parent="." instance=ExtResource("4_jhun4")]
unique_name_in_owner = true

[node name="UnderSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("3")
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_4idgn")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.101961, 0.101961, 0.101961, 1)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_4idgn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="RandomAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -8.0
script = ExtResource("10_s5i80")
streams = Array[AudioStream]([ExtResource("11_nl2p4")])
randomize_pitch = true
pitch_min = 0.7
pitch_max = 1.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0bjvr")
}
autoplay = "Blink"

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dese6")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_sdkoe")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
